--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             android:name="edu.zjut.cyclingClubRaceTool.ui.sub.EditFinishRider"
             android:exported="false" />
         <activity
+            android:name="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseExchangeFinishRider"
+            android:exported="false" />
+        <activity
+            android:name="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseCloneFinishRider"
+            android:exported="false" />
+        <activity
             android:name="edu.zjut.cyclingClubRaceTool.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
