初步实现修改rider功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseCloneFinishRider"
             android:exported="false" />
         <activity
+            android:name="edu.zjut.cyclingClubRaceTool.ui.sub.EditRider"
+            android:exported="false" />
+        <activity
             android:name="edu.zjut.cyclingClubRaceTool.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
